--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "xsd4js",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Converts XSD schemas in ES6 classes with nested parsing architecture.",
   "repository": {
     "type": "git",
     "url": "https://github.com/Happycar/xsd4js"
   },
   "main": "index.js",
+  "preferGlobal": "true",
   "authors": [
     {
       "name": "Marcelo Filho",
